<resources>
    <string name="app_name">AppSiswa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="list_siswa">List Data Siswa</string>
    <string name="nama">RIDWAN ( LAKI-LAKI )</string>
    <string name="tgl_lahir">Lahir : 10-12-1994</string>
    <string name="alamat">JL.HIBRIDA NO 5A</string>
    <string name="registered">Registered: 10/12/1994 10:15:30</string>
    <string name="umur">26 Tahun</string>
</resources>
