<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="7dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#0F000000">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_list"
                android:layout_weight="0"
                android:layout_width="45dp"
                android:src="@drawable/ic_camera"
                android:layout_height="match_parent"
                >

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/tv_list_nama"
                android:layout_weight="1"
                android:gravity="left|center"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:textColor="@color/colorBlackDark"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/nama">

            </TextView>

            <TextView
                android:id="@+id/tv_list_tgl_lahir"
                android:gravity="end|center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="12dp"
                android:textColor="@color/colorGreenDark"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/tgl_lahir">

            </TextView>

        </LinearLayout>


        <View
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorBlack">

        </View>

        <TextView
            android:id="@+id/tv_list_alamat"
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/alamat">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:layout_marginBottom="14dp">

            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_list_created"
                android:paddingTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9dp"
                android:textColor="@color/gray_shadow"
                android:fontFamily="@font/poppins_light"
                android:text="@string/registered">

            </TextView>
            <TextView
                android:id="@+id/tv_list_umur"
                android:background="@drawable/textview_rounded_accent"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:textSize="13dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/colorAccent"
                android:text="@string/umur">

            </TextView>

        </LinearLayout>



    </LinearLayout>





</LinearLayout>
